Add VirtualThreadFactory that allows creation of VirtualThreadPool with custom CarrierThreadPool